# LexiPopup

./: Prompt  replit.md
LexiPopup/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
LexiPopup/app/src/androidTest/java/com/lexipopup/: DatabaseSizeAndWordTest.kt  DatabaseTest.kt  IntentTest.kt
LexiPopup/app/src/main/: AndroidManifest.xml
LexiPopup/app/src/main/cpp/: llama_jni.cpp
LexiPopup/app/src/main/java/com/lexipopup/: LexiPopupApp.kt
LexiPopup/app/src/main/java/com/lexipopup/data/download/: DatabasePack.kt  DictionaryDownloadWorker.kt  DownloadStateStore.kt
LexiPopup/app/src/main/java/com/lexipopup/di/: AppModule.kt  DataStoreModule.kt
LexiPopup/app/src/main/java/com/lexipopup/domain/models/: AppMode.kt  AppSettings.kt  BiologyData.kt  Flashcard.kt  LayerConfig.kt  UserNote.kt  VocabularyHistory.kt  WordEntry.kt
LexiPopup/app/src/main/java/com/lexipopup/domain/repositories/: DictionaryRepository.kt  VocabularyRepository.kt
LexiPopup/app/src/main/java/com/lexipopup/domain/usecases/: LookupWordUseCase.kt  SpacedRepetitionUseCase.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/about/: AboutScreen.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/ai/: AiSettingsScreen.kt  AiSettingsViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/backup/: BackupRestoreScreen.kt  BackupViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/biosettings/: BioSettingsScreen.kt  BioSettingsViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/chat/: AiChatScreen.kt  AiChatViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/crash/: CrashLogActivity.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/dashboard/: CalendarHeatmap.kt  DashboardModeSwitcher.kt  DashboardScreen.kt  DashboardViewModel.kt  MainActivity.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/datacontrol/: DataControlScreen.kt  DataControlViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/dictionary/: DictionaryBrowserScreen.kt  DictionaryBrowserViewModel.kt  SeedWordListScreen.kt  SeedWordListViewModel.kt  WordDetailScreen.kt  WordDetailViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/download/: DownloadProgressScreen.kt  DownloadViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/flashcards/: FlashcardsScreen.kt  FlashcardsViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/history/: WordHistoryScreen.kt  WordHistoryViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/layers/: LookupLayersScreen.kt  LookupLayersViewModel.kt
LexiPopup/app/src/main/java/com/lexipopup/presentation/popup/: PopupScreen.kt  (+5 more)
LexiPopup/app/src/main/java/com/lexipopup/utils/: AiExplanationHelper.kt  BootReceiver.kt  CrashHandler.kt  ExportHelper.kt  HiltContextModule.kt  ModeManager.kt  ModeStrings.kt  NotificationHelper.kt  PermissionManager.kt  SensorHelper.kt  SettingsDataStore.kt  TtsHelper.kt
LexiPopup/app/src/main/java/com/lexipopup/workers/: FlashcardReminderWorker.kt  RandomWordWorker.kt  WotdNotificationWorker.kt
LexiPopup/app/src/main/res/drawable/: ic_launcher_foreground.xml
LexiPopup/app/src/main/res/layout/: widget_loading.xml
LexiPopup/app/src/main/res/values/: strings.xml  themes.xml
LexiPopup/app/src/main/res/values-night/: themes.xml
LexiPopup/app/src/main/res/xml/: file_paths.xml  random_word_widget_info.xml  recent_widget_info.xml  wotd_widget_info.xml
LexiPopup/app/src/test/java/com/lexipopup/: DatabaseSizeAndWordTest.kt  LookupWordNormalizationTest.kt  SpacedRepetitionTest.kt
(+85 files in other folders)
